# performance-tests

./: .gitignore  Locust_2025-08-27-17h03_locust_open_debit_card_account.py_http___localhost_8003.html  Locust_2025-08-28-12h32_locust_open_debit_card_account.py_localhost.html  README.md  api_client_get_documents.py  api_client_get_user.py  api_client_issue_physical_card.py  api_client_make_top_up_operation.py  config.py  docker-compose.example.yaml  faker_example.py  fastapi_basics.py  fastapi_courses.py  greeting_pb2_grpc.py  grpc_api_client_get_documents.py  grpc_api_client_issue_physical_card.py  grpc_api_client_make_top_up_operation.py  grpc_locust_get_accounts.py  grpc_locust_open_debit_card_account.py  grpcio_get_documents.py  grpcio_get_operation_receipt.py  grpcio_interceptors.py  grpcio_issue_physical_card.py  grpcio_make_purchase_operation.py  grpcio_open_debit_card_account.py  httpx_client.py  httpx_event_hooks.py  httpx_example.py  httpx_get_documents.py  httpx_get_operation_receipt.py  httpx_get_user.py  httpx_issue_virtual_card.py  httpx_open_deposit_account.py  json_example.json  json_example.py  locust_builder.py  locust_get_accounts_report_01_09.html  locust_get_user_scenario.py  locust_open_debit_card_account.py  locust_task_set.py  (+7 more)
.github/workflows/: performance-tests.yml
17889720659/: index.html
17890106807/: index.html
17890165711/: index.html
17890265184/: index.html
17890312999/: index.html
17890354233/: index.html
clients/grpc/: client.py
clients/grpc/gateway/: client.py  locust.py
clients/grpc/gateway/accounts/: client.py
clients/grpc/gateway/cards/: client.py
clients/grpc/gateway/documents/: client.py
clients/grpc/gateway/operations/: client.py
clients/grpc/gateway/users/: client.py
clients/http/: client.py
clients/http/gateway/: client.py  locust.py
clients/http/gateway/accounts/: client.py
clients/http/gateway/cards/: client.py
clients/http/gateway/documents/: client.py  schema.py
clients/http/gateway/operations/: client.py  schema.py
clients/http/gateway/users/: client.py  schema.py
dumps/: existing_user_get_documents_seeds.json  existing_user_get_operations_seeds.json  existing_user_issue_virtual_card_seeds.json  existing_user_make_purchase_operation_seeds.json  test_scenario_seeds.json
reports/: Locust_2025-08-29-13h21_grpc_locust_open_debit_card_account.py_localhost.html  grpc_locust_get_accounts_report_01_09_2025.html
scenarios/grpc/gateway/existing_user_get_documents/: report.html
scenarios/grpc/gateway/existing_user_get_operations/: report.html  scenario.py  v1.0.conf
scenarios/grpc/gateway/existing_user_issue_virtual_card/: load_testing_hub.yaml  report.html  scenario.py  v1.0.conf
scenarios/grpc/gateway/existing_user_make_purchase_operation/: report.html  scenario.py
scenarios/grpc/gateway/get_accounts/: report.html  scenario.py
scenarios/grpc/gateway/get_documents/: scenario.py
scenarios/grpc/gateway/new_user_get_accounts/: load_testing_hub.yaml  v1.0.conf
scenarios/grpc/gateway/new_user_get_documents/: load_testing_hub.yaml  report.html
scenarios/grpc/gateway/new_user_issue_physical_card/: load_testing_hub.yaml  report.html  scenario.py  v1.0.conf
scenarios/grpc/gateway/new_user_make_top_up_operation/: load_testing_hub.yaml  report.html
scenarios/http/gateway/existing_user_get_documents/: report.html  v1.0.conf
scenarios/http/gateway/existing_user_get_operations/: load_testing_hub.yaml  report.html  scenario.py  v1.0.conf
scenarios/http/gateway/existing_user_issue_virtual_card/: load_testing_hub.yaml  report.html  scenario.py  v1.0.conf
seeds/: builder.py  dumps.py
seeds/scenarios/: existing_user_get_operations.py  existing_user_issue_virtual_card.py
seeds/schema/: plan.py  result.py
tools/: fakers.py  logger.py
tools/config/: http.py
tools/locust/: user.py
(+20 files in other folders)
