[project]
name = "performance-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.10.0)",
    "asttokens (==3.0.0)",
    "attrs (==25.3.0)",
    "backcall (==0.2.0)",
    "beautifulsoup4 (==4.13.5)",
    "bidict (==0.23.1)",
    "bleach (==6.2.0)",
    "blinker (==1.9.0)",
    "brotli (==1.1.0)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.8.3)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.3)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "configargparse (==1.7.1)",
    "decorator (==5.2.1)",
    "defusedxml (==0.7.1)",
    "distlib (==0.4.0)",
    "dnspython (==2.7.0)",
    "docopt (==0.6.2)",
    "dulwich (==0.24.1)",
    "email-validator (==2.2.0)",
    "executing (==2.2.1)",
    "faker (==37.5.3)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.19.1)",
    "findpython (==0.7.0)",
    "flask (==3.1.2)",
    "flask-login (==0.6.3)",
    "gevent (==25.5.1)",
    "geventhttpclient (==2.3.4)",
    "greenlet (==3.2.4)",
    "grpcio (==1.74.0)",
    "grpcio-tools (==1.74.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "ipython (==8.12.3)",
    "itsdangerous (==2.2.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.6)",
    "jsonschema (==4.25.1)",
    "jsonschema-specifications (==2025.9.1)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.8.1)",
    "jupyterlab-pygments (==0.3.0)",
    "keyring (==25.6.0)",
    "locust (==2.39.0)",
    "locust-cloud (==1.26.3)",
    "markupsafe (==3.0.2)",
    "matplotlib-inline (==0.1.7)",
    "mistune (==3.1.4)",
    "more-itertools (==10.8.0)",
    "msgpack (==1.1.1)",
    "nbclient (==0.10.2)",
    "nbconvert (==7.16.6)",
    "nbformat (==5.10.4)",
    "packaging (==25.0)",
    "pandocfilters (==1.5.1)",
    "parso (==0.8.5)",
    "pbs-installer (==2025.9.2)",
    "pickleshare (==0.7.5)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.4.0)",
    "prompt-toolkit (==3.0.52)",
    "protobuf (==6.32.0)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pycparser (==2.22)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-engineio (==4.12.2)",
    "python-socketio (==5.13.0)",
    "pywin32 (==311)",
    "pywin32-ctypes (==0.2.3)",
    "pyzmq (==27.0.2)",
    "rapidfuzz (==3.14.1)",
    "redis (==6.4.0)",
    "referencing (==0.36.2)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "rpds-py (==0.27.1)",
    "setuptools (==80.9.0)",
    "shellingham (==1.5.4)",
    "simple-websocket (==1.1.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.8)",
    "stack-data (==0.6.3)",
    "termcolor (==3.1.0)",
    "tinycss2 (==1.4.0)",
    "tomlkit (==0.13.3)",
    "tornado (==6.5.2)",
    "traitlets (==5.14.3)",
    "trove-classifiers (==2025.9.11.17)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "virtualenv (==20.34.0)",
    "wcwidth (==0.2.13)",
    "webencodings (==0.5.1)",
    "websocket-client (==1.8.0)",
    "werkzeug (==3.1.3)",
    "wsproto (==1.2.0)",
    "yarg (==0.1.9)",
    "zope-event (==5.1.1)",
    "zope-interface (==7.2)",
    "zstandard (==0.25.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
